Fixed overflow in header and footer

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,6 +1,5 @@
 body {
-    margin-top: 100px !important;
-    margin-bottom: 100px;
+    margin-top: 20px !important;
 }
 
 #our-story {
@@ -68,7 +67,8 @@ body {
     }
 
     body {
-        margin-top: 60px;
+        margin-top: 150px !important;
+        margin-bottom: 100px;
     }
 }
 
